--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 .App {
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
   text-align: center;
   padding: 20px
+  
 }
 
 .personal {
@@ -17,6 +19,12 @@
 
 p{
   text-align: left;
+}
+
+.education-div{
+  display:flex;
+  justify-content:space-between;
+  flex-wrap:wrap
 }
 
 /* @media only screen and (max-width:600px){
