--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,8 @@
 .App {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
-  padding: 20px
+  padding: 20px;
+  border: 1px solid black
   
 }
 
@@ -14,6 +15,12 @@
 
 .test{
   width:225px
+}
+
+.image{
+  display:flex;
+  justify-content:space-around;
+  flex-wrap:wrap;
 }
 
 
